--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Научиться учиться</title>
-</head>
-<body>
-  <div class="page">
-
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <title>Научиться учиться</title>
+  </head>
+  <body>
+    <div class="page">
+      <header class="header">
+        <div class="logo header__logo">Яндекс Практикум</div>
+        <h1 class="header__title">Научиться учиться</h1>
+        <p class="header__ subtitle">
+          Какие современные и эффективные подходы к обучению вы можете
+          использовать в своей жизни?
+          <a href="#" class="header__link">Узнать &rarr;</a>
+        </p>
+        <img
+          src="./images/header-image.png"
+          class="header__main-illustration"
+          alt="Картина Федора Решетникова"
+        >
+        <div class="header__square-pic" ></div>
+      </header>
+    </div>
+  </body>
 </html>
