--- a/index.html
+++ b/index.html
@@ -1,27 +1,239 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Научиться учиться</title>
+    <link rel="stylesheet" href="/styles/normalize.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
     <div class="page">
       <header class="header">
-        <div class="logo header__logo">Яндекс Практикум</div>
+        <div class="logo logo_place_header"></div>
         <h1 class="header__title">Научиться учиться</h1>
-        <p class="header__ subtitle">
+        <p class="header__subtitle header__link">
           Какие современные и эффективные подходы к обучению вы можете
           использовать в своей жизни?
-          <a href="#" class="header__link">Узнать &rarr;</a>
+          <a href="#" class="header__link_active">Узнать &rarr;</a>
         </p>
         <img
+          class="header__main-illustration__img"
           src="./images/header-image.png"
-          class="header__main-illustration"
           alt="Картина Федора Решетникова"
-        >
-        <div class="header__square-pic" ></div>
+        />
+        <div class="header__square-pic"></div>
       </header>
+      <main class="content">
+        <section class="description">
+          <div class="two-columns">
+            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+            <ul class="two-columns__main-text">
+              <li class="two-columns__paragraph">
+                Ни в школе, ни в институте нас не учат тому, как правильно
+                изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
+                тренируемся решать однообразные задачи, чтобы лучше сдать тест,
+                но часто в итоге это не дает нам реального знания. Зубрежка
+                быстро выветривается и не приносит пользы.
+              </li>
+              <li class="two-columns__paragraph">
+                <span class="two-columns__span-accent">Вывод</span>: учиться
+                тоже нужно уметь, но почему-то этому мало где учат. Что с этим
+                делать?
+              </li>
+              <li class="two-columns__paragraph">
+                Конкретные техники и упражнения помогают изменить подход к
+                обучению, сделать его эффективным и захватывающим. Эти же
+                техники применяются на примере обучения в Практикуме.
+              </li>
+            </ul>
+          </div>
+        </section>
+        <section class="digits">
+          <h3 class="section-title">Цифры и факты</h3>
+          <h4 class="section-subtitle">Про учёбу и мозг</h4>
+          <table class="table">
+            <tr class="table__cell">
+              <td class="td_width">
+                <h5 class="table__heading">86 миллиардов</h5>
+                <p class="table__text">Число нейронов в мозге человека</p>
+              </td>
+              <td class="td_width">
+                <h5 class="table__heading">2.1 миллиарда</h5>
+                <p class="table__text">
+                  Число нуждающихся в повышении квалификации
+                </p>
+                <h6 class="table__text-2">Всемирный Банк, 2017</h6>
+              </td>
+              <td class="td_width">
+                <h5 class="table__heading">1000 терабайт</h5>
+                <p class="table__text">Объём памяти человека</p>
+              </td>
+              <td class="td_width">
+                <h5 class="table__heading">500 триллионов</h5>
+                <p class="table__text">
+                  Число ответственных за обучение нервных синапсов у взрослого
+                  человека
+                </p>
+              </td>
+            </tr>
+            <tr class="table__cell">
+              <td class="td_width">
+                <h5 class="table__heading">420 миллионов</h5>
+                <p class="table__text">
+                  Число взрослых людей моложе 25 лет, не имеющих образования для
+                  трудоустройства
+                </p>
+                <h6 class="table__text-2">Всемирный Банк, 2017</h6>
+              </td>
+              <td class="td_width">
+                <h5 class="table__heading">17–20 лет</h5>
+                <p class="table__text">Пик обучаемости</p>
+              </td>
+              <td class="td_width">
+                <h5 class="table__heading">1885 год</h5>
+                <p class="table__text">Открытие кривой забывания</p>
+              </td>
+              <td class="td_width">
+                <h5 class="table__heading">1889 год</h5>
+                <p class="table__text">Открытие условного рефлекса</p>
+              </td>
+            </tr>
+          </table>
+        </section>
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
+          <a href="#" class="feynman__link">Подробнее &rarr;</a>
+          <img
+            class="feynman-illustration__img"
+            src="./images/feynman.png"
+            alt="Фотография Ричарда Феймана"
+          />
+        </section>
+        <section class="kaufman">
+          <div class="kaufman__triangle"></div>
+          <h3 class="section-title_theme_dark">Принципы обучения</h3>
+          <h4 class="section-subtitle_theme_dark">от Джоша Кауфмана</h4>
+          <table class="table_theme_dark">
+            <tr class="table__cell_theme_dark">
+              <td class="td">
+                <h5 class="table__heading_theme_dark">1</h5>
+                <p class="table__text_theme_dark">
+                  Выберите привлекательный проект.
+                </p>
+              </td>
+              <td class="td">
+                <h5 class="table__heading_theme_dark">2</h5>
+                <p class="table__text_theme_dark">
+                  Сосредоточьтесь на каком-то одном навыке.
+                </p>
+              </td>
+              <td class="td">
+                <h5 class="table__heading_theme_dark">3</h5>
+                <p class="table__text_theme_dark">
+                  Определите целевой уровень мастерства.
+                </p>
+              </td>
+              <td class="td">
+                <h5 class="table__heading_theme_dark">4</h5>
+                <p class="table__text_theme_dark">
+                  Разбейте навык на элементы.
+                </p>
+              </td>
+              <td class="td">
+                <h5 class="table__heading_theme_dark">5</h5>
+                <p class="table__text_theme_dark">
+                  Приготовьте всё необходимое для занятий.
+                </p>
+              </td>
+            </tr>
+            <tr class="table__cell_theme_dark">
+              <td class="td">
+                <h5 class="table__heading_theme_dark">6</h5>
+                <p class="table__text_theme_dark">
+                  Устраните препятствия для занятий.
+                </p>
+              </td>
+              <td class="td">
+                <h5 class="table__heading_theme_dark">7</h5>
+                <p class="table__text_theme_dark">
+                  Выделите специальное время для занятий.
+                </p>
+              </td>
+              <td class="td">
+                <h5 class="table__heading_theme_dark">8</h5>
+                <p class="table__text_theme_dark">
+                  Создайте быстрые петли обратной связи.
+                </p>
+              </td>
+              <td class="td">
+                <h5 class="table__heading_theme_dark">9</h5>
+                <p class="table__text_theme_dark">
+                  Занимайтесь по расписанию, короткими интенсивными интервалами.
+                </p>
+              </td>
+              <td class="td">
+                <h5 class="table__heading_theme_dark">10</h5>
+                <p class="table__text_theme_dark">
+                  Уделяйте внимание количеству и скорости.
+                </p>
+              </td>
+            </tr>
+          </table>
+        </section>
+      </main>
+      <footer class="footer">
+        <div class="footer__columns">
+          <div class="footer__column_content_copyright">
+            <div class="logo logo_place_footer"></div>
+            <div class="footer__author">© Виктор Абанькин</div>
+          </div>
+          <div class="footer__column_content_info">
+            <h2 class="footer__column-heading">О Практикуме</h2>
+
+            <ul class="footer__column-links">
+              <li class="footer__list-item">
+                <a href="#" class="link footer__column-link">Главная</a>
+              </li>
+              <li class="footer__list-item">
+                <a href="#" class="link footer__column-link">Концепция</a>
+              </li>
+              <li class="link footer__list-item">
+                <a href="#" class="link footer__column-link">Наставники</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__column_content_social">
+            <h4 class="footer__column-heading">Соцсети</h4>
+            <ul class="footer__column-links">
+              <li class="footer__list-item">
+                <a
+                  href="./images/youtube-icon.svg"
+                  class="link footer__column-link footer__column-link_youtube"
+                  >YouTube</a
+                >
+              </li>
+
+              <li class="footer__list-item">
+                <a
+                  href="./images/vk_color_white.svg"
+                  class="link footer__column-link footer__column-link_vk"
+                  >ВКонтакте</a
+                >
+              </li>
+              <li class="footer__list-item">
+                <a
+                  href="./images/tiktok-icon.svg"
+                  class="link footer__column-link footer__column-link_tt"
+                  >TikTok</a
+                >
+              </li>
+            </ul>
+            <div class="footer__social-icon"></div>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
