--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="/styles/normalize.css" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
   <body>
     <div class="page">
@@ -15,13 +15,13 @@
         <p class="header__subtitle header__link">
           Какие современные и эффективные подходы к обучению вы можете
           использовать в своей жизни?
-          <a href="#" class="header__link_active">Узнать &rarr;</a>
+          <a href="#" class="link header__link_active">Узнать &rarr;</a>
         </p>
         <img
           class="header__main-illustration__img"
           src="./images/header-image.png"
           alt="Картина Федора Решетникова"
-        />
+        >
         <div class="header__square-pic"></div>
       </header>
       <main class="content">
@@ -109,7 +109,7 @@
             class="feynman-illustration__img"
             src="./images/feynman.png"
             alt="Фотография Ричарда Феймана"
-          />
+          >
         </section>
         <section class="kaufman">
           <div class="kaufman__triangle"></div>
