испр ошбкт нижнего регтстра

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <svg
             width="228"
             height="32"
-            viewBox="0 0 228 32"
+            viewbox="0 0 228 32"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
           >
@@ -130,7 +130,7 @@
             <svg
               width="995"
               height="1006"
-              viewBox="0 0 995 1006"
+              viewbox="0 0 995 1006"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
             >
@@ -218,7 +218,7 @@
               <svg
                 width="228"
                 height="32"
-                viewBox="0 0 228 32"
+                viewbox="0 0 228 32"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
               >
@@ -257,7 +257,7 @@
                   <svg
                     width="16"
                     height="16"
-                    viewBox="0 0 16 16"
+                    viewbox="0 0 16 16"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
                   >
@@ -274,7 +274,7 @@
                   <svg
                     width="16"
                     height="16"
-                    viewBox="0 0 16 16"
+                    viewbox="0 0 16 16"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
                   >
@@ -293,7 +293,7 @@
                   <svg
                     width="16"
                     height="16"
-                    viewBox="0 0 16 16"
+                    viewbox="0 0 16 16"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
                   >
