--- a/index.html
+++ b/index.html
@@ -1,256 +1,241 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
     <div class="page">
       <header class="header">
-        <div class="logo logo_place_header">
-          <img
-            class="logo_place_header"
-            src="./images/logo_place_header.svg"
-            alt="логотип"
-          />
-        </div>
+        <img
+          class="logo logo_place_header"
+          src="./images/logo_place_header.svg"
+          alt="логотип"
+         >
         <h1 class="header__title">Научиться учиться</h1>
-        <p class="header__subtitle header__link">
+        <p class="header__subtitle">
           Какие современные и эффективные подходы к обучению вы можете
           использовать в своей жизни?
-          <a href="#" class="link header__link_active">Узнать &rarr;</a>
+          <a href="#" class="link header__link">Узнать &rarr;</a>
         </p>
         <img
-          class="header__main-illustration__img"
+          class="header__main-illustration"
           src="./images/header-image.png"
           alt="Картина Федора Решетникова"
-        />
+         >
         <div class="header__square-pic"></div>
       </header>
       <main class="content">
         <section class="description">
-          <div class="two-columns">
+          <article class="two-columns">
             <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
-            <ul class="two-columns__main-text">
-              <li class="two-columns__paragraph">
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">
                 Ни в школе, ни в институте нас не учат тому, как правильно
                 изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
                 тренируемся решать однообразные задачи, чтобы лучше сдать тест,
                 но часто в итоге это не дает нам реального знания. Зубрежка
                 быстро выветривается и не приносит пользы.
-              </li>
-              <li class="two-columns__paragraph">
+              </p>
+              <p class="two-columns__paragraph">
                 <span class="two-columns__span-accent">Вывод</span>: учиться
                 тоже нужно уметь, но почему-то этому мало где учат. Что с этим
                 делать?
-              </li>
-              <li class="two-columns__paragraph">
+              </p>
+              <p class="two-columns__paragraph">
                 Конкретные техники и упражнения помогают изменить подход к
                 обучению, сделать его эффективным и захватывающим. Эти же
                 техники применяются на примере обучения в Практикуме.
-              </li>
-            </ul>
-          </div>
+              </p>
+            </div>
+          </article>
         </section>
         <section class="digits">
-          <h3 class="section-title">Цифры и факты</h3>
-          <h4 class="section-subtitle">Про учёбу и мозг</h4>
-          <table class="table">
-            <tr class="table__cell">
-              <td class="td_width">
-                <h5 class="table__heading">86 миллиардов</h5>
-                <p class="table__text">Число нейронов в мозге человека</p>
-              </td>
-              <td class="td_width">
-                <h5 class="table__heading">2.1 миллиарда</h5>
-                <p class="table__text">
-                  Число нуждающихся в повышении квалификации
-                </p>
-                <h6 class="table__text-2">Всемирный Банк, 2017</h6>
-              </td>
-              <td class="td_width">
-                <h5 class="table__heading">1000 терабайт</h5>
-                <p class="table__text">Объём памяти человека</p>
-              </td>
-              <td class="td_width">
-                <h5 class="table__heading">500 триллионов</h5>
-                <p class="table__text">
-                  Число ответственных за обучение нервных синапсов у взрослого
-                  человека
-                </p>
-              </td>
-            </tr>
-            <tr class="table__cell">
-              <td class="td_width">
-                <h5 class="table__heading">420 миллионов</h5>
-                <p class="table__text">
-                  Число взрослых людей моложе 25 лет, не имеющих образования для
-                  трудоустройства
-                </p>
-                <h6 class="table__text-2">Всемирный Банк, 2017</h6>
-              </td>
-              <td class="td_width">
-                <h5 class="table__heading">17–20 лет</h5>
-                <p class="table__text">Пик обучаемости</p>
-              </td>
-              <td class="td_width">
-                <h5 class="table__heading">1885 год</h5>
-                <p class="table__text">Открытие кривой забывания</p>
-              </td>
-              <td class="td_width">
-                <h5 class="table__heading">1889 год</h5>
-                <p class="table__text">Открытие условного рефлекса</p>
-              </td>
-            </tr>
-          </table>
+          <h2 class="section-title">Цифры и факты</h2>
+          <p class="section-subtitle">Про учёбу и мозг</p>
+          <div class="table">
+            <div class="table__cell">
+              <h3 class="table__heading">86 миллиардов</h3>
+              <p class="table__text">Число нейронов в мозге человека</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">2.1 миллиарда</h3>
+              <p class="table__text">
+                Число нуждающихся в повышении квалификации
+              </p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">1000 терабайт</h3>
+              <p class="table__text">Объём памяти человека</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">500 триллионов</h3>
+              <p class="table__text">
+                Число ответственных за обучение нервных синапсов у взрослого
+                человека
+              </p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">420 миллионов</h3>
+              <p class="table__text">
+                Число взрослых людей моложе 25 лет, не имеющих образования для
+                трудоустройства
+              </p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">17–20 лет</h3>
+              <p class="table__text">Пик обучаемости</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">1885 год</h3>
+              <p class="table__text">Открытие кривой забывания</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">1889 год</h3>
+              <p class="table__text">Открытие условного рефлекса</p>
+            </div>
+          </div>
         </section>
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
-          <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
-          <a href="#" class="feynman__link">Подробнее &rarr;</a>
-          <img
-            class="feynman-illustration__img"
-            src="./images/feynman.png"
-            alt="Фотография Ричарда Феймана"
-          />
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a href="#" class="link feynman__link">Подробнее &rarr;</a>
+          <div class="feynman-illustration__img"></div>
         </section>
         <section class="kaufman">
           <div class="kaufman__triangle"></div>
-          <h3 class="section-title_theme_dark">Принципы обучения</h3>
-          <h4 class="section-subtitle_theme_dark">от Джоша Кауфмана</h4>
-          <table class="table_theme_dark">
-            <tr class="table__cell_theme_dark">
-              <td class="td">
-                <h5 class="table__heading_theme_dark">1</h5>
-                <p class="table__text_theme_dark">
-                  Выберите привлекательный проект.
-                </p>
-              </td>
-              <td class="td">
-                <h5 class="table__heading_theme_dark">2</h5>
-                <p class="table__text_theme_dark">
-                  Сосредоточьтесь на каком-то одном навыке.
-                </p>
-              </td>
-              <td class="td">
-                <h5 class="table__heading_theme_dark">3</h5>
-                <p class="table__text_theme_dark">
-                  Определите целевой уровень мастерства.
-                </p>
-              </td>
-              <td class="td">
-                <h5 class="table__heading_theme_dark">4</h5>
-                <p class="table__text_theme_dark">
-                  Разбейте навык на элементы.
-                </p>
-              </td>
-              <td class="td">
-                <h5 class="table__heading_theme_dark">5</h5>
-                <p class="table__text_theme_dark">
-                  Приготовьте всё необходимое для занятий.
-                </p>
-              </td>
-            </tr>
-            <tr class="table__cell_theme_dark">
-              <td class="td">
-                <h5 class="table__heading_theme_dark">6</h5>
-                <p class="table__text_theme_dark">
-                  Устраните препятствия для занятий.
-                </p>
-              </td>
-              <td class="td">
-                <h5 class="table__heading_theme_dark">7</h5>
-                <p class="table__text_theme_dark">
-                  Выделите специальное время для занятий.
-                </p>
-              </td>
-              <td class="td">
-                <h5 class="table__heading_theme_dark">8</h5>
-                <p class="table__text_theme_dark">
-                  Создайте быстрые петли обратной связи.
-                </p>
-              </td>
-              <td class="td">
-                <h5 class="table__heading_theme_dark">9</h5>
-                <p class="table__text_theme_dark">
-                  Занимайтесь по расписанию, короткими интенсивными интервалами.
-                </p>
-              </td>
-              <td class="td">
-                <h5 class="table__heading_theme_dark">10</h5>
-                <p class="table__text_theme_dark">
-                  Уделяйте внимание количеству и скорости.
-                </p>
-              </td>
-            </tr>
-          </table>
+          <h2 class="section-title section-title_theme_dark">
+            Принципы обучения
+          </h2>
+          <p class="section-subtitle section-subtitle_theme_dark">
+            от Джоша Кауфмана
+          </p>
+          <div class="table table_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
+              <h5 class="table__heading table__heading_theme_dark">1</h5>
+              <p class="table__text table__text_theme_dark">
+                Выберите привлекательный проект.
+              </p>
+            </div>
+
+            <div class="table__cell table__cell_theme_dark">
+              <h5 class="table__heading table__heading_theme_dark">2</h5>
+              <p class="table__text table__text_theme_dark">
+                Сосредоточьтесь на каком-то одном навыке.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h5 class="table__heading table__heading_theme_dark">3</h5>
+              <p class="table__text table__text_theme_dark">
+                Определите целевой уровень мастерства.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h5 class="table__heading table__heading_theme_dark">4</h5>
+              <p class="table__text table__text_theme_dark">
+                Разбейте навык на элементы.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h5 class="table__heading table__heading_theme_dark">5</h5>
+              <p class="table__text table__text_theme_dark">
+                Приготовьте всё необходимое для занятий.
+              </p>
+            </div>
+
+            <div class="table__cell table__cell_theme_dark">
+              <h5 class="table__heading table__heading_theme_dark">6</h5>
+              <p class="table__text table__text_theme_dark">
+                Устраните препятствия для занятий.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h5 class="table__heading table__heading_theme_dark">7</h5>
+              <p class="table__text table__text_theme_dark">
+                Выделите специальное время для занятий.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h5 class="table__heading table__heading_theme_dark">8</h5>
+              <p class="table__text table__text_theme_dark">
+                Создайте быстрые петли обратной связи.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h5 class="table__heading table__heading_theme_dark">9</h5>
+              <p class="table__text table__text_theme_dark">
+                Занимайтесь по расписанию, короткими интенсивными интервалами.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h5 class="table__heading table__heading_theme_dark">10</h5>
+              <p class="table__text table__text_theme_dark">
+                Уделяйте внимание количеству и скорости.
+              </p>
+            </div>
+          </div>
         </section>
       </main>
-
       <footer class="footer">
         <div class="footer__columns">
           <div class="footer__column footer__column_content_copyright">
-            <div class="logo logo_place_footer">
-              <img
-                class="logo_place_footer"
-                src="./images/logo_place_footer.svg"
-                alt="логотип"
-              />
-            </div>
-            <div class="footer__author">© Виктор Абанькин</div>
-          </div>
+            <img
+              class="logo logo_place_footer"
+              src="./images/logo_place_footer.svg"
+              alt="логотип"
+            >
+            <p class="footer__author">© Виктор Абанькин</p>
+          </div>    
           <div class="footer__column footer__column_content_info">
             <h2 class="footer__column-heading">О Практикуме</h2>
-            <ul class="footer__column-links">
-              <li class="footer__list-item">
-                <a href="#" class="link footer__column-link">Главная</a>
-              </li>
-              <li class="footer__list-item">
-                <a href="#" class="link footer__column-link">Концепция</a>
-              </li>
-              <li class="footer__list-item">
-                <a href="#" class="link footer__column-link">Наставники</a>
-              </li>
-            </ul>
+            <nav class="footer__column-links">
+              <ul class="footer__column-links">
+                <li>
+                  <a href="#" class="link footer__column-link">Главная</a>
+                </li>             
+                <li>
+                  <a href="#" class="link footer__column-link">Концепция</a>
+                </li>                     
+                <li>
+                  <a href="#" class="link footer__column-link">Наставники</a>
+                </li>
+              </ul>
+            </nav>
           </div>
           <div class="footer__column footer__column_content_social">
-            <h4 class="footer__column-heading">Соцсети</h4>
-            <ul class="footer__column-links">
-              <li class="footer__list-item">
-                <a href="#" class="link footer__column-link">
-                  <img
-                    class="footer__ social-icon"
-                    src="./images/youtube-icon.svg"
-                    alt="логотип YouTube"
-                  />
-                  YouTube</a
-                >
-              </li>
-              <li class="footer__list-item">
-                <a href="#" class="link footer__column-link">
-                  <img
-                    class="footer__ social-icon"
-                    src="./images/vk_color_white.svg"
-                    alt="логотип ВКонтакте"
-                  />
-                  ВКонтакте</a
-                >
-              </li>
-              <li class="footer__list-item">
-                <a href="#" class="link footer__column-link">
-                  <img
-                    class="footer__ social-icon"
-                    src="./images/tiktok-icon.svg"
-                    alt="логотип TikTok"
-                  />
-                  TikTok</a
-                >
-              </li>
-            </ul>
-          </div>
+             <h2 class="footer__column-heading">Соцсети</h2>
+             <ul class="footer__column-links">
+                <li >
+                   <a href="#" class="link footer__column-link footer__column-link_youtube">
+                     <img
+                       class="footer__social-icon"
+                       src="./images/youtube-icon.svg"
+                       alt="логотип YouTube"
+                    >YouTube</a>                   
+                 </li>                          
+                 <li>
+                  <a href="#" class="link footer__column-link footer__column-link_vk">
+                    <img
+                      class="footer__social-icon"
+                      src="./images/vk_color_white.svg"
+                      alt="логотип ВКонтакте"
+                   >ВКонтакте</a>                  
+                 </li>              
+                 <li>
+                   <a href="#" class="link footer__column-link footer__column-link_tiktok">
+                     <img
+                       class="footer__social-icon"
+                       src="./images/tiktok-icon.svg"
+                       alt="логотип TikTok"                    
+                   >TikTok</a>
+                </li>            
+              </ul>
+          </div>        
         </div>
       </footer>
     </div>
