--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
           <p class="feynman__subtitle">Выучить и не забыть.</p>
-          <a href="#" class="link feynman__link">Подробнее &rarr;</a>
-          <div class="feynman-illustration__img"></div>
+          <a href="#" class="link feynman__link">Подробнее &rarr;</a>        
         </section>
         <section class="kaufman">
           <div class="kaufman__triangle"></div>
@@ -117,63 +116,63 @@
           </p>
           <div class="table table_theme_dark">
             <div class="table__cell table__cell_theme_dark">
-              <h5 class="table__heading table__heading_theme_dark">1</h5>
+              <h3 class="table__heading table__heading_theme_dark">1</h3>
               <p class="table__text table__text_theme_dark">
                 Выберите привлекательный проект.
               </p>
             </div>
 
             <div class="table__cell table__cell_theme_dark">
-              <h5 class="table__heading table__heading_theme_dark">2</h5>
+              <h3 class="table__heading table__heading_theme_dark">2</h3>
               <p class="table__text table__text_theme_dark">
                 Сосредоточьтесь на каком-то одном навыке.
               </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h5 class="table__heading table__heading_theme_dark">3</h5>
+              <h3 class="table__heading table__heading_theme_dark">3</h3>
               <p class="table__text table__text_theme_dark">
                 Определите целевой уровень мастерства.
               </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h5 class="table__heading table__heading_theme_dark">4</h5>
+              <h3 class="table__heading table__heading_theme_dark">4</h3>
               <p class="table__text table__text_theme_dark">
                 Разбейте навык на элементы.
               </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h5 class="table__heading table__heading_theme_dark">5</h5>
+              <h3 class="table__heading table__heading_theme_dark">5</h3>
               <p class="table__text table__text_theme_dark">
                 Приготовьте всё необходимое для занятий.
               </p>
             </div>
 
             <div class="table__cell table__cell_theme_dark">
-              <h5 class="table__heading table__heading_theme_dark">6</h5>
+              <h3 class="table__heading table__heading_theme_dark">6</h3>
               <p class="table__text table__text_theme_dark">
                 Устраните препятствия для занятий.
               </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h5 class="table__heading table__heading_theme_dark">7</h5>
+              <h3 class="table__heading table__heading_theme_dark">7</h3>
               <p class="table__text table__text_theme_dark">
                 Выделите специальное время для занятий.
               </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h5 class="table__heading table__heading_theme_dark">8</h5>
+              <h3 class="table__heading table__heading_theme_dark">8</h3>
               <p class="table__text table__text_theme_dark">
                 Создайте быстрые петли обратной связи.
               </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h5 class="table__heading table__heading_theme_dark">9</h5>
+              <h3 class="table__heading table__heading_theme_dark">9</h3>
               <p class="table__text table__text_theme_dark">
                 Занимайтесь по расписанию, короткими интенсивными интервалами.
               </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h5 class="table__heading table__heading_theme_dark">10</h5>
+              <h3 class="table__heading table__heading_theme_dark">10</h3>
               <p class="table__text table__text_theme_dark">
                 Уделяйте внимание количеству и скорости.
               </p>
@@ -193,7 +192,7 @@
           </div>    
           <div class="footer__column footer__column_content_info">
             <h2 class="footer__column-heading">О Практикуме</h2>
-            <nav class="footer__column-links">
+            <nav class="footer__column-menu">
               <ul class="footer__column-links">
                 <li>
                   <a href="#" class="link footer__column-link">Главная</a>
@@ -211,7 +210,7 @@
              <h2 class="footer__column-heading">Соцсети</h2>
              <ul class="footer__column-links">
                 <li >
-                   <a href="#" class="link footer__column-link footer__column-link_youtube">
+                   <a href="#" class="link footer__column-link">
                      <img
                        class="footer__social-icon"
                        src="./images/youtube-icon.svg"
@@ -219,7 +218,7 @@
                     >YouTube</a>                   
                  </li>                          
                  <li>
-                  <a href="#" class="link footer__column-link footer__column-link_vk">
+                  <a href="#" class="link footer__column-link">
                     <img
                       class="footer__social-icon"
                       src="./images/vk_color_white.svg"
@@ -227,7 +226,7 @@
                    >ВКонтакте</a>                  
                  </li>              
                  <li>
-                   <a href="#" class="link footer__column-link footer__column-link_tiktok">
+                   <a href="#" class="link footer__column-link">
                      <img
                        class="footer__social-icon"
                        src="./images/tiktok-icon.svg"
