--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           class="header__main-illustration"
           src="./images/header-image.png"
           alt="Картина Федора Решетникова"
-         >
+          >         
         <div class="header__square-pic"></div>
       </header>
       <main class="content">
@@ -52,6 +52,104 @@
               </p>
             </div>
           </article>
+        </section>
+        <section class="techniques">
+          <h2 class="section-title">Техники обучения</h2>
+          <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+          <div class="cards">
+            <div class="cards__item">
+              <img 
+                class="cards__image"
+                src="./images/cards-attention.png"
+                alt="фотография книги Брианна Виста"
+              >
+              <h3 class="cards__title">Два вида внимания</h3>
+              <p class="cards__description">
+                Глубокие знания возникают, если чередовать
+                сфокусированное и рассеянное мышление.</p>
+            </div>
+            <div class="cards__item">
+              <img 
+                class="cards__image"
+                src="./images/cards-recall.png"
+                alt="античная скульптура мальчика"
+              >
+              <h3 class="cards__title">Recall</h3>
+              <p class="cards__description">
+                Вспоминайте изученное — это позволит соединить
+                разрозненные порции памяти.</p>
+            </div>
+            <div class="cards__item">
+              <img 
+                class="cards__image"
+                src="./images/cards-interliving.png"
+                alt="фотография Всемирного торгового центра"
+              >                      
+              <h3 class="cards__title">Интерливинг</h3>
+              <p class="cards__description">
+                Изучайте несколько навыков одновременно, 
+                они обогащают друг друга.</p>
+            </div>
+            <div class="cards__item">
+              <img 
+                class="cards__image"
+                src="./images/cards-question.png"
+                alt="фотография городской библиотеки Штутгарта "
+              >           
+              <h3 class="cards__title">Вопросы</h3>
+              <p class="cards__description">
+                Слушая преподавателя, придумывайте хороший вопрос, 
+                который вас действительно волнует.</p>
+            </div>
+            <div class="cards__item">
+              <img 
+                class="cards__image"
+                src="./images/cards-competence.png"
+                alt="фотография книг на руке"
+                >          
+              <h3 class="cards__title">Иллюзия компетентности</h3>
+              <p class="cards__description">
+                Повторите про себя, запишите, расскажите другу: 
+                вам только кажется, что вы владеете новой темой.</p>
+            </div>           
+          </div>
+        </section>
+        <section class="video">
+          <h2 class="section-title">Видео нa TED</h2>
+          <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes"> 
+          <iframe class="video__iframe"            
+                  src="https://www.youtube.com/embed/arj7oStGLkU"
+                  allowfullscreen
+                  title="выступление Тима Урбана">
+          </iframe>
+          <iframe class="video__iframe"                  
+                  src="https://www.youtube.com/embed/5MgBikgcWnY"
+                  allowfullscreen
+                  title="выступление Джоша Кауфмана">
+           </iframe>
+        </div>
+        </section>
+        <section class="oakley">
+          <article class="two-columns">
+            <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">
+                С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, 
+                причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, 
+                да так успешно, что её выдвинули в командиры. 
+                Но для продвижения по службе нужно было сдавать математику. 
+                И тогда Барбара придумала свой подход к точным наукам. 
+                Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, 
+                чем у тех, кому всё ясно с первого взгляда.
+              </p>
+            </div>
+          </article>
+        </section>
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a href="#" class="link feynman__link">Подробнее &rarr;</a>        
         </section>
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
@@ -101,10 +199,25 @@
             </div>
           </div>
         </section>
-        <section class="feynman">
-          <h2 class="feynman__title">Метод Фейнмана</h2>
-          <p class="feynman__subtitle">Выучить и не забыть.</p>
-          <a href="#" class="link feynman__link">Подробнее &rarr;</a>        
+        <section class="khan">
+          <div class="khan__container">
+            <p class="khan__author">Салман Хан</p>
+            <h2 class="khan__title">Весь мир — школа</h2>
+            <p class="khan__quote">
+              Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. 
+              Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — 
+              так учащиеся повсюду смогут получить навыки и знания, к
+              оторые приносят успех в школе, карьере и жизни.</p>
+            <p class="khan__quote-author">Джордж Лукас</p>
+            <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+            <div class="khan__book-container">
+              <img class="khan__book-pic"
+                   src="./images/khan-book.jpg"
+                   alt="обложка книги Салмана Хана"
+                   >
+              <a href="#" class="link khan__buy-link">Купить книгу &rarr;</a>
+            </div>
+          </div>
         </section>
         <section class="kaufman">
           <div class="kaufman__triangle"></div>
@@ -179,6 +292,33 @@
             </div>
           </div>
         </section>
+        <section class="resources">
+          <h2 class="section-title">Полезные ресурсы</h2>
+          <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+          <div class="resources__logo-zone">
+            <div class="link resources__link">
+              <a href="#" class="resources__logo">
+                <img src="./images/logo/resources-arzamas.svg"
+                 alt="логотип"></a>
+            </div>
+            <div class="link resources__link">
+              <a href="#" class="resources__logo">
+                <img src="./images/logo/resources-n1.svg"
+                 alt="логотип"></a>
+            </div>
+            <div class="link resources__link">
+              <a href="#" class="resources__logo">
+                <img src="./images/logo/resources-strelka.svg"
+                 alt="логотип"></a>
+            </div>
+            <div class="link resources__link">
+              <a href="#" class="resources__logo">
+                <img src="./images/logo/resources-polka.svg"
+                 alt="логотип"></a>
+            </div>
+          </div>
+
+        </section>
       </main>
       <footer class="footer">
         <div class="footer__columns">
@@ -209,7 +349,7 @@
           <div class="footer__column footer__column_content_social">
              <h2 class="footer__column-heading">Соцсети</h2>
              <ul class="footer__column-links">
-                <li >
+                <li>
                    <a href="#" class="link footer__column-link">
                      <img
                        class="footer__social-icon"
