--- a/index.html
+++ b/index.html
@@ -315,34 +315,34 @@
           </p>
           <ul class="resources__logo-zone">
             <li>
-              <a href="#">
+              <a href="#" class="link resources__link">
                 <img
                   src="./images/logo/resources-arzamas.svg"
-                  class="link resources__logo"
+                  class="resources__logo"
                   alt="курсы арзамас"
               ></a>
             </li>
             <li>
-              <a href="#">
+              <a href="#" class="link resources__link">
                 <img
                   src="./images/logo/resources-n1.svg"
-                  class="link resources__logo"
+                  class="resources__logo"
                   alt="главное издание о науке, технике и технологиях"
               ></a>
             </li>
             <li>
-              <a href="#">
+              <a href="#" class="link resources__link">
                 <img
                   src="./images/logo/resources-strelka.svg"
-                  class="link resources__logo"
+                  class="resources__logo"
                   alt="Институт Стрелка"
               ></a>
             </li>
             <li>
-              <a href="#">
+              <a href="#" class="link resources__link">
                 <img
                   src="./images/logo/resources-polka.svg"
-                  class="link resources__logo"
+                  class="resources__logo"
                   alt="образовательный проект полка"
               ></a>
             </li>
